<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="#6699cc"
    android:orientation="vertical"
    tools:context=".FullscreenActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/quiz"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:layout_marginBottom="10dp" >
    </TextView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/new_york_image"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/guess_the_image">
    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/guess_the_city_in_the_image_above"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp" >
    </TextView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/new_york"
        android:textSize="20sp"
        android:padding="8dp"
        android:background="#0091EA"
        android:textColor="#FFF"
        android:layout_marginBottom="15dp"
        android:id="@+id/choice1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/dubai"
        android:textSize="20sp"
        android:padding="8dp"
        android:background="#0091EA"
        android:textColor="#FFF"
        android:layout_marginBottom="15dp"
        android:id="@+id/choice2" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/toronto"
        android:textSize="20sp"
        android:padding="8dp"
        android:background="#0091EA"
        android:textColor="#FFF"
        android:layout_marginBottom="15dp"
        android:id="@+id/choice3" />

</LinearLayout>